[gd_scene load_steps=4 format=2]

[ext_resource path="res://Title Screen.gd" type="Script" id=1]
[ext_resource path="res://Textures/doggo_1.png" type="Texture" id=2]
[ext_resource path="res://Textures/Cat.png" type="Texture" id=3]

[node name="Title Screen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_top = -0.00135752
anchor_bottom = -0.00135752
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 443.0
margin_top = 217.0
margin_right = 580.0
margin_bottom = 383.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 137.0
margin_bottom = 14.0
text = "Doggo Party Game"
align = 1
valign = 1
uppercase = true

[node name="Play" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 137.0
margin_bottom = 43.0
rect_min_size = Vector2( 100, 25 )
text = "Play"

[node name="Fullscreen" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 47.0
margin_right = 137.0
margin_bottom = 72.0
rect_min_size = Vector2( 100, 25 )
text = "Fullscreen"

[node name="Settings" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 76.0
margin_right = 137.0
margin_bottom = 101.0
rect_min_size = Vector2( 100, 25 )
disabled = true
text = "Settings"

[node name="About" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 105.0
margin_right = 137.0
margin_bottom = 130.0
rect_min_size = Vector2( 100, 25 )
disabled = true
text = "About"

[node name="PointsCat" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 134.0
margin_right = 137.0
margin_bottom = 148.0

[node name="PointsDog" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 152.0
margin_right = 137.0
margin_bottom = 166.0

[node name="Start Game" type="Popup" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
popup_exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Start Game"]
margin_right = 1024.0
margin_bottom = 600.0

[node name="CenterContainer2" type="CenterContainer" parent="Start Game/Panel"]
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Start Game/Panel/CenterContainer2"]
margin_left = 143.0
margin_top = 120.0
margin_right = 880.0
margin_bottom = 480.0

[node name="Doggo Box" type="VBoxContainer" parent="Start Game/Panel/CenterContainer2/HBoxContainer"]
margin_right = 300.0
margin_bottom = 360.0

[node name="Head" type="Label" parent="Start Game/Panel/CenterContainer2/HBoxContainer/Doggo Box"]
margin_right = 300.0
margin_bottom = 14.0
text = "Doggo Controller"
align = 1
valign = 1

[node name="TextureRect" type="TextureRect" parent="Start Game/Panel/CenterContainer2/HBoxContainer/Doggo Box"]
margin_top = 18.0
margin_right = 300.0
margin_bottom = 318.0
rect_min_size = Vector2( 300, 300 )
texture = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="Start Game/Panel/CenterContainer2/HBoxContainer/Doggo Box"]
margin_top = 322.0
margin_right = 300.0
margin_bottom = 336.0
text = "No Controller selected"
align = 1
valign = 1

[node name="ControllerButtonDog" type="Button" parent="Start Game/Panel/CenterContainer2/HBoxContainer/Doggo Box"]
margin_top = 340.0
margin_right = 300.0
margin_bottom = 360.0
text = "Set Controller"

[node name="VBoxContainer" type="VBoxContainer" parent="Start Game/Panel/CenterContainer2/HBoxContainer"]
margin_left = 304.0
margin_right = 433.0
margin_bottom = 360.0

[node name="Start" type="Button" parent="Start Game/Panel/CenterContainer2/HBoxContainer/VBoxContainer"]
margin_right = 129.0
margin_bottom = 25.0
rect_min_size = Vector2( 100, 25 )
disabled = true
text = "Start"

[node name="HBoxContainer" type="HBoxContainer" parent="Start Game/Panel/CenterContainer2/HBoxContainer/VBoxContainer"]
margin_top = 29.0
margin_right = 129.0
margin_bottom = 53.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Start Game/Panel/CenterContainer2/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 51.0
margin_bottom = 19.0
text = "Rounds:"

[node name="RoundNumber" type="SpinBox" parent="Start Game/Panel/CenterContainer2/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 55.0
margin_right = 129.0
margin_bottom = 24.0
min_value = 1.0
max_value = 10.0
value = 1.0

[node name="Catto Box" type="VBoxContainer" parent="Start Game/Panel/CenterContainer2/HBoxContainer"]
margin_left = 437.0
margin_right = 737.0
margin_bottom = 360.0

[node name="Head" type="Label" parent="Start Game/Panel/CenterContainer2/HBoxContainer/Catto Box"]
margin_right = 300.0
margin_bottom = 14.0
text = "Catto Controller"
align = 1
valign = 1

[node name="TextureRect" type="TextureRect" parent="Start Game/Panel/CenterContainer2/HBoxContainer/Catto Box"]
margin_top = 18.0
margin_right = 300.0
margin_bottom = 318.0
rect_min_size = Vector2( 300, 300 )
texture = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="Start Game/Panel/CenterContainer2/HBoxContainer/Catto Box"]
margin_top = 322.0
margin_right = 300.0
margin_bottom = 336.0
text = "No Controller selected"
align = 1
valign = 1

[node name="ControllerButtonCat" type="Button" parent="Start Game/Panel/CenterContainer2/HBoxContainer/Catto Box"]
margin_top = 340.0
margin_right = 300.0
margin_bottom = 360.0
text = "Set Controller"

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
autoplay = true
[connection signal="pressed" from="CenterContainer/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Fullscreen" to="." method="_on_Fullscreen_pressed"]
[connection signal="pressed" from="Start Game/Panel/CenterContainer2/HBoxContainer/Doggo Box/ControllerButtonDog" to="." method="_on_ControllerButtonDog_pressed"]
[connection signal="pressed" from="Start Game/Panel/CenterContainer2/HBoxContainer/VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Start Game/Panel/CenterContainer2/HBoxContainer/Catto Box/ControllerButtonCat" to="." method="_on_ControllerButtonCat_pressed"]
